--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -57,14 +57,15 @@
                         <span>Почасови</span>
                     </label>
                 </div>
+                <hr>
                 <div class="row justify-content-around my-3">
                     <div>
-                        Име на Клиент <input list="client_names" autocomplete="off"  aria-controls="clients" type="search" id="client_name"
-                            name="client_name">
+                        Име на Клиент <input list="client_names" autocomplete="off" aria-controls="clients"
+                            type="search" id="client_name" name="client_name">
                     </div>
                     <div>
-                        Идентификационен код <input type="text" autocomplete="off"  aria-controls="clients" type="search" list="ident_codes" id="ident_code"
-                            name="ident_code">
+                        Идентификационен код <input type="text" autocomplete="off" aria-controls="clients" type="search"
+                            list="ident_codes" id="ident_code" name="ident_code">
                     </div>
                 </div>
             </div>
