--- a/views/inquiry/inquiry-missing-information.ejs
+++ b/views/inquiry/inquiry-missing-information.ejs
@@ -67,6 +67,7 @@
                         <span class="checkmark"></span>
                     </label>
                 </div>
+                <hr>
                 <div class="row justify-content-around my-3">
                     <div><span class="text-heading mr-2">Име на клиент</span> <input id="nameOfClient"
                             list="stp-hour-readings-clients" name="name" autocomplete="off" class="ml-2"
@@ -87,12 +88,13 @@
                         </datalist>
                     </div>
                 </div>
+                <hr id="hr-line-eso">
                 <div class="row mt-3 justify-content-around">
-                    <div class="text-heading mt-3">От дата<input id="fromDate" name="fromDate" class="ml-2" required type="date"
-                            type="search"></input>
+                    <div class="text-heading mt-3">От дата<input id="fromDate" name="fromDate" class="ml-2" required
+                            type="date" type="search"></input>
                     </div>
-                    <div class="text-heading mt-3">До дата<input id="toDate" name="toDate" class="ml-2" required type="date"
-                            type="search"></input>
+                    <div class="text-heading mt-3">До дата<input id="toDate" name="toDate" class="ml-2" required
+                            type="date" type="search"></input>
                     </div>
 
                     <span class="text-heading mt-3 erp">Вид ЕРП:</span>
@@ -109,8 +111,7 @@
                         <span>ЕнергоПРО</span>
                     </label>
                 </div>
-                <div class="row justify-content-around">
-                </div>
+                <hr>
                 <div class="row justify-content-center">
                     <button type="submit" id="searchBtn" class="btn-primary btn-lg ml-3 mt-3">Търсене</button>
                 </div>
