--- a/views/layoutMerged.ejs
+++ b/views/layoutMerged.ejs
@@ -33,6 +33,8 @@
   <link rel="stylesheet" href="../../../AdminLTE-master/plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
