Add new scripts in views

--- a/views/inquiry/inquiry-imbalances.ejs
+++ b/views/inquiry/inquiry-imbalances.ejs
@@ -182,6 +182,7 @@
     <script src="../../../../js/helper-functions/remove-duplicates-from-array.js"></script>
     <script src="../../../../js/helper-functions/date-manipulations.js"></script>
     <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../../../../js/helper-functions/object-sort.js"></script>
     <script src="../../../../js/inquiry/inquiry-imbalances.js"></script>
     <script src="../../../../js/exportFunctions/exportTable.js"></script>
 </body>
