--- a/views/inquiry/inquiry-readings.ejs
+++ b/views/inquiry/inquiry-readings.ejs
@@ -175,6 +175,8 @@
     <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
     <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/helper-functions/date-manipulations.js"></script>
+    <script src="../../../../js/helper-functions/remove-duplicates-from-array.js"></script>
+    <script src="../../../../js/helper-functions/object-sort.js"></script>
     <script src="../../../../js/inquiry/inquiry-readings.js"></script>
     <script src="../../../../js/exportFunctions/exportTable.js"></script>
 </body>
