Add STP evn import
Added STP even hourly import which is calculated by the product of the client's amount and the profile coeficient

--- a/views/graphs-menu/graph-readings.ejs
+++ b/views/graphs-menu/graph-readings.ejs
@@ -84,7 +84,7 @@
                 <th>Име на клиент</th>
                 <th>Дата на мерене</th>
                 <th>ЕРП</th>
-                <th>Общ товар</th>
+                <th>Общ товар (MW)</th>
             </tr>
         </thead>
         <tbody id="tBody">
