--- a/views/graphs-menu/stp-graph-readings.ejs
+++ b/views/graphs-menu/stp-graph-readings.ejs
@@ -85,7 +85,7 @@
                 <th>Име на клиент</th>
                 <th>Дата на график</th>
                 <th>ЕРП</th>
-                <th>Общ Товар</th>
+                <th>Общ Товар (MW)</th>
             </tr>
         </thead>
         <tbody id="tBody">
