--- a/views/readings-menu/listReadings.ejs
+++ b/views/readings-menu/listReadings.ejs
@@ -84,7 +84,7 @@
                 <th>Име на клиент</th>
                 <th>Дата на мерене</th>
                 <th>ЕРП</th>
-                <th>Общ товар</th>
+                <th>Общ товар (MW)</th>
             </tr>
         </thead>
         <tbody id="tBody">
