--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -60,12 +60,12 @@
                 <hr>
                 <div class="row justify-content-around my-3">
                     <div>
-                        Име на Клиент <input list="client_names" autocomplete="off" aria-controls="clients"
-                            type="search" id="client_name" name="client_name">
+                        <span class="mr-3"> Име на Клиент</span> <input list="client_names" autocomplete="off"
+                            aria-controls="clients" type="search" id="client_name" name="client_name">
                     </div>
                     <div>
-                        Идентификационен код <input type="text" autocomplete="off" aria-controls="clients" type="search"
-                            list="ident_codes" id="ident_code" name="ident_code">
+                        <span class="mr-3">Идентификационен код</span> <input type="text" autocomplete="off"
+                            aria-controls="clients" type="search" list="ident_codes" id="ident_code" name="ident_code">
                     </div>
                 </div>
             </div>
