--- a/views/imports/hourly-eso.ejs
+++ b/views/imports/hourly-eso.ejs
@@ -29,14 +29,18 @@
                 <h2 class="mb-3">Импортиране на данни: ЕСО - Почасови</h2>
             </div>
             <div class="card-body">
+                <div>
+                <h3 >Избери идентификационен код на клиент:</h3>
+            </div>
+                <hr>   
                 <div class="row justify-content-around my-3">
                     <div>
-                       <span class="mr-3"> Име на Клиент</span> <input list="client_names" autocomplete="off" aria-controls="clients"
-                            type="search" id="client_name" name="client_name">
+                        <span class="mr-3"> Име на Клиент</span> <input list="client_names" autocomplete="off"
+                            aria-controls="clients" type="search" id="client_name" name="client_name">
                     </div>
                     <div>
-                        <span class="mr-3">Идентификационен код</span>  <input type="text" autocomplete="off" aria-controls="clients" type="search"
-                            list="ident_codes" id="ident_code" name="ident_code">
+                        <span class="mr-3">Идентификационен код</span> <input type="text" autocomplete="off"
+                            aria-controls="clients" type="search" list="ident_codes" id="ident_code" name="ident_code">
                     </div>
                 </div>
                 <hr>
