--- a/views/imports/hourly.ejs
+++ b/views/imports/hourly.ejs
@@ -43,23 +43,25 @@
                     </label>
                 </div>
                 <hr>
-                <h2>Избери ЕРП:</h2>
-                <hr>
-                <div class="row justify-content-center">
-                    <label class="radio mr-5">EVN
-                        <input type="radio" id="evn" name="data-erp">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="radio mr-5">ЧЕЗ
-                        <input type="radio" id="cez" name="data-erp">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="radio">ЕнергоПРО
-                        <input type="radio" id="energo-pro" name="data-erp">
-                        <span class="checkmark"></span>
-                    </label>
+                <div class="configurate-options">
+                    <h2>Избери ЕРП:</h2>
+                    <hr>
+                    <div class="row justify-content-center">
+                        <label class="radio mr-5">EVN
+                            <input type="radio" id="evn" name="data-erp">
+                            <span class="checkmark"></span>
+                        </label>
+                        <label class="radio mr-5">ЧЕЗ
+                            <input type="radio" id="cez" name="data-erp">
+                            <span class="checkmark"></span>
+                        </label>
+                        <label class="radio">ЕнергоПРО
+                            <input type="radio" id="energo-pro" name="data-erp">
+                            <span class="checkmark"></span>
+                        </label>
+                    </div>
+                    <hr>
                 </div>
-                <hr>
                 <div class="form-group invisible" id="hourly-import">
                     <label for="exampleFormControlTextarea1">Плъзни документа тук</label>
                     <i class="fas fa-arrow-down"></i>
