--- a/views/graphs-menu/eso-graph-predictions-daily.ejs
+++ b/views/graphs-menu/eso-graph-predictions-daily.ejs
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <h2 id="date-heading" class="text-center">EСО - почасово мерене за дата:</h2>
+    <h2 id="date-heading" class="text-center">EСО - почасов график за дата:</h2>
     <hr>
     <h2 id="client-heading" class="text-center">Клиент:</h2>
     <hr>
@@ -54,8 +54,7 @@
     </div>
     <script src="../../../../../js/helper-functions/process-missing-calendar-date.js"></script>
     <script src="../../../../../js/helper-functions/find-get-parameter.js"></script>
-    <script src="../../../../../js/readings-menu/eso-hour-readings-daily.js">
+    <script src="../../../../../js/graphs/eso-graph-predictions-daily.js">
     </script>
 </body>
-
 </html>
