--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -186,6 +186,12 @@
                                         <p> &nbsp&nbspПочасови</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a id="graphs-eso" href="/users/list/eso-graph-readings/" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>EСО</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
