--- a/views/graphs-menu/list-eso-graphs.ejs
+++ b/views/graphs-menu/list-eso-graphs.ejs
@@ -19,48 +19,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../js/datatables/datatables.min.css">
-    <script src="../../../js/datatables/datatables.js"></script>
-    <link rel="stylesheet" href="../../css/checkboxes.css">
+    <link rel="stylesheet" href="../../../../../../js/datatables/datatables.min.css">
+    <script src="../../../../../../js/datatables/datatables.js"></script>
+    <link rel="stylesheet" href="../../../../css/checkboxes.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="card card-default">
         <div class="card-header">
-            <h2 class="text-center">EСО - мерения</h2>
+            <h2 class="text-center">EСО - графици</h2>
         </div>
         <div class="card-body">
             <form action="" method="GET">
                 <div class="row justify-content-around my-3">
-                    <div>
+                    <div class="text-heading">
                         <span class="mr-3"> Име на Клиент</span> <input list="client_names" autocomplete="off"
                             aria-controls="clients" type="search" id="client_name" name="client_name">
                     </div>
-                    <div>
+                    <div class="text-heading">
                         <span class="mr-3">Идентификационен код</span> <input type="text" autocomplete="off"
                             aria-controls="clients" type="search" list="ident_codes" id="ident_code" name="ident_code">
                     </div>
                 </div>
                 <hr>
                 <div class="row my-3 justify-content-around">
-                    <div class="row my-3 justify-content-center">
-                        <div class="text-heading mr-5">От дата<input id="fromDate" name="fromDate" class="ml-2"
-                                type="date" type="search"></input>
-                        </div>
-                        <div class="text-heading">До дата<input id="toDate" name="toDate" class="ml-2" type="date"
-                                type="search"></input>
-                        </div>
+
+                    <div class="text-heading ml-5"><span class="mr-3">От дата</span><input id="fromDate" name="fromDate"
+                            class="" type="date" type="search"></input>
                     </div>
-                    <span class="mt-3 text-heading">Вид енергия:</span>
-                    <label class="checkbox">
-                        <input type="checkbox" name="energy_type" value="used-energy" id="used-energy" checked>
-                        <span>Потребена</span>
-                    </label>
-                    <label class="checkbox">
-                        <input type="checkbox" name="energy_type" value="produced-energy" id="produced-energy" checked>
-                        <span>Произведена</span>
-                    </label>
+                    <div class="text-heading ml-5"> <span class="mr-3">До дата</span> <input id="toDate" name="toDate"
+                            class="ml-5" type="date" type="search"></input>
+                    </div>
+
                 </div>
                 <hr>
                 <div class="row justify-content-center">
@@ -71,25 +62,23 @@
         <div class="container clients text-center">
         </div>
     </div>
-    <table id="eso-hour-readings-table" class="display">
+    <table id="eso-graph-readings-table" class="display">
         <thead>
             <tr>
                 <th>ID на мерене</th>
                 <th>Идентификационен код на клиент</th>
                 <th>Име на клиент</th>
                 <th>Дата</th>
-                <th>Енергия</th>
             </tr>
         </thead>
         <tbody id="tBody">
         </tbody>
     </table>
     </div>
-    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
-    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
-    <script src="../../../../js/helper-functions/remove-duplicates-from-array.js"></script>
-    <script src="../../../../js/helper-functions/get-this-and-last-month-dates.js"></script>
-    <script src="../../../../js/readings-menu/list-eso-hour-readings.js"></script>
+    <script src="../../../../../../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../../../../../../js/helper-functions/find-get-parameter.js"></script>
+    <script src="../../../../../../js/helper-functions/remove-duplicates-from-array.js"></script>
+    <script src="../../../../../../js/helper-functions/get-this-and-last-month-dates.js"></script>
+    <script src="../../../../../../js/graphs/list-eso-graphs-table.js"></script>
 </body>
-
 </html>
