--- a/views/clients/clients-info.ejs
+++ b/views/clients/clients-info.ejs
@@ -40,6 +40,7 @@
         <li><a class="nav-link" data-toggle="tab" href="#hour-readings">Мерения по часове</a></li>
         <li><a class="nav-link" data-toggle="tab" href="#graph">График</a></li>
         <li><a class="nav-link" data-toggle="tab" href="#imbalance">Небаланси</a></li>
+        <li><a class="nav-link" data-toggle="tab" href="#profile-history">История на профилите</a></li>
     </ul>
 
     <div class="tab-content">
@@ -219,6 +220,17 @@
                 <canvas id="imbalance-chart" class="mb-5" width="1200" height="500"></canvas>
             </div>
         </div>
+
+        <div id="profile-history" class="tab-pane fade">
+            <div class="card card-default mt-2">
+                <div class="card-header">
+                    <h2 class="text-center my-2">История на профилите за клиент: </h2>
+                </div>
+                <div class="card-body text-center">
+                </div>
+            </div>
+        </div>
+
     </div>
     <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/helper-functions/date-manipulations.js"></script>
