--- a/views/inquiry/inquiry-missing-information.ejs
+++ b/views/inquiry/inquiry-missing-information.ejs
@@ -54,7 +54,9 @@
                         <span class="checkmark"></span>
                     </label>
                     <span class="mt-4 text-heading">Вид Мерене:</span>
-                    <label class="radio mr-5">СТП
+                    <label data-toggle="tooltip" data-placement="top" container="body"
+                        title="При тази опция заявката е по-сложна и може леко да се забави. Хубаво е когато има възможност да се зададат по-конкретни филтри."
+                        class="radio mr-5">СТП
                         <input type="radio" id="stp_hour_readings" value="stp_hour_readings" name="readings">
                         <span class="checkmark"></span>
                     </label>
