--- a/public/css/clients-info.css
+++ b/public/css/clients-info.css
@@ -12,13 +12,13 @@ input:not([type='date']):not([type='search']):not([type='checkbox']) {
     text-align: center;
 }
 
-.nav-tabs .nav-link{
+.nav-tabs .nav-link {
     transition: 0.5s;
     transition-timing-function: ease-in-out;
 }
 
 .nav-tabs .nav-link:hover {
-    color:white !important;
+    color: white !important;
     border: 1px solid #3d5af1;
     background-color: #9c1de7
 }
@@ -120,7 +120,7 @@ input:not([type='date']):not([type='search']):not([type='checkbox'])::-webkit-ca
 }
 
 ul.nav-tabs a.nav-link {
-    color:black !important;
+    color: black !important;
 }
 
 .nav-tabs .nav-link:hover {
@@ -131,8 +131,8 @@ ul.nav-tabs a.nav-link {
 .nav-tabs .nav-link.active {
     color: black;
 }
- 
- 
+
+
 .fc-content .fc-time {
     display: none !important;
 }
@@ -154,7 +154,7 @@ a.fc-more::after {
     visibility: visible;
     content: 'Има мерене';
     background-color: #2d6cdf;
-    color:white;
+    color: white;
     white-space: nowrap;
     border-radius: 10px;
     position: relative !important;
@@ -356,4 +356,13 @@ input:checked+.slider:before {
     -webkit-transition: All 0.3s ease;
     -moz-transition: All 0.3s ease;
     -o-transition: All 0.3s ease;
+}
+
+
+.list-group-item+.list-group-item {
+    border-top-width: 1px !important;
+}
+
+.list-group-item+.list-group-item:hover {
+    cursor: pointer;
 }
