--- a/public/css/imports.css
+++ b/public/css/imports.css
@@ -46,3 +46,48 @@ textarea{
 .form-group{
     margin-bottom:0;
 }
+
+.squaredThree {
+    position: relative;
+}
+
+.squaredThree label {
+    width: 30px;
+    height: 29px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#222222), to(#45484d));
+    background: linear-gradient(to bottom, #222222 0%, #45484d 100%);
+    border-radius: 4px;
+    box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.4);
+}
+
+.squaredThree label:after {
+    content: '';
+    width: 19px;
+    height: 7px;
+    position: absolute;
+    top: 10px;
+    left: 8px;
+    border: 3px solid #fcfff4;
+    border-top: none;
+    border-right: none;
+    background: transparent;
+    opacity: 0;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.squaredThree label:hover::after {
+    opacity: 0.3;
+}
+
+.squaredThree input[type=checkbox] {
+    visibility: hidden;
+}
+
+.squaredThree input[type=checkbox]:checked+label:after {
+    opacity: 1;
+}
